# crash-handler

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  changelog-category-check.yml  changelog-check.yml  check-formatting.yml  test-windows.yml
src/: Recovery.cpp  Recovery.hpp  WinSupport.cpp
